Bug 154040 - Not possible to insert interactive frame
Summary: Not possible to insert interactive frame
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Frame
  Show dependency treegraph
 
Reported: 2023-03-07 10:34 UTC by sdc.blanco
Modified: 2023-04-05 11:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2023-03-07 10:34:30 UTC
Open a new Writer document. Insert - Frame - Frame Interactively. 

Actual:  Cursor changes to "cross", but disappears after mouse-click to insert frame.

Expected:  Can use "cross" cursor to draw a frame, which is inserted.

Problem is recent.  First noticed with the following (7. March 2023) build:
(May have been working correctly in a build from last week.)

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0484a9a3f5e2ecb678f6fb41bbb251529e89c00d
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: da-DK (da_DK); UI: en-US
Calc: threaded
Comment 1 sdc.blanco 2023-03-07 10:35:40 UTC
Also reproduced in "Safe Mode"
Comment 2 Werner Tietz 2023-03-07 12:38:42 UTC
Hallo
Just to be sure… did you ***hold*** the mouse-button meanwhile »drawing the Frame« ?
Comment 3 Rainer Bielefeld Retired 2023-03-07 12:40:45 UTC
NOT reproducible REPRODUCIBLE with Server Installation of Version: 7.6.0.0.alpha0+ (X86_64) 
Build ID: ab20dba30769a5a52830220daa347772485db6a2
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US – Special new User Profile for testing

Very new effect?

And yes, report is unclear concerning "hold"
Comment 4 sdc.blanco 2023-03-07 14:00:10 UTC
(In reply to Werner Tietz from comment #2)
> Just to be sure… did you ***hold*** the mouse-button meanwhile »drawing the
> Frame« ?
After "cross" cursor, first mouse click removes the cursor.  Nonetheless, I did try to hold and draw, but nothing happens.

Insert - Frame - Frame works as expected.

(In reply to Rainer Bielefeld Retired from comment #3)
> NOT reproducible REPRODUCIBLE with Server Installation of Version:
> 7.6.0.0.alpha0+ (X86_64) 
> Build ID: ab20dba30769a5a52830220daa347772485db6a2
This build is from 23 Feb. 2023.

> Very new effect?
Yes. As noted in OP.  First noticed with the master build from today.
Comment 5 V Stuart Foote 2023-03-07 16:08:19 UTC
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 55360ba58f33f3f45c83decce092c43d25c4e48c
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 6 V Stuart Foote 2023-03-07 16:10:15 UTC
No issue, same system with
Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

or

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 7 V Stuart Foote 2023-03-07 16:13:11 UTC
(In reply to V Stuart Foote from comment #5)

So confirmed. *Unable* to Insert -> Frame -> Frame Interactively

Cross icon goes away on mouse release, and nothing is drawn while dragging it.

> Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 55360ba58f33f3f45c83decce092c43d25c4e48c
> CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL:
> win
> Locale: en-US (en_US); UI: en-US
> Calc: threaded
Comment 8 stragu 2023-03-07 16:41:07 UTC
Repro on Linux too:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 288c0920a8475f9f2c537212e04aa7649192ad8c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bisected with linux-64-7.6 repo to first bad commit 75891c1432b97f44596650df3ea0541d4b01e63f which point to core commit:

commit b53b01a050bbb43cd571c428e86fc23a2fa5773c
author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	Sat Feb 11 17:08:54 2023 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	Sun Mar 05 01:41:21 2023 +0000
tree 840daa96b28536b554972a8b422ef6681900f440
parent 89d19cf6e721652eaa19eee2e4700eb4e4fdb540
svx: make SdrObject abstract by making CloneSdrObject pure virtual
This change makes SdrObject an abstract class that can't be as
we don't want it to be instantiated. With this the ClonseSdrObject
became a pure virtual function.
With this change also the SwFlyDrawObj needs a implementation of
the CloneSdrFunction, which was previously provided by SdrObject.
Change-Id: I2efb8c1e6fac12b17ce497285067029d7da1c1fd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148239

Tomaž, can you please have a look?
Comment 9 Rainer Bielefeld Retired 2023-03-07 17:08:26 UTC
Yup, also REPRODUCIBLE on my PC with Server Installation of Version: 7.6.0.0.alpha0+ (X86_64), Build ID: 0484a9a3f5e2ecb678f6fb41bbb251529e89c00d
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded – Special new User Profile for testing
(exactly the same Build as reporter used)
Comment 10 Tomaz Vajngerl 2023-03-16 05:44:49 UTC
Yes, I can reproduce. Must be something dumb we do at inserting with the SdrObject, which is not valid anymore.
Comment 11 Commit Notification 2023-04-01 09:30:24 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e03b053fcc2905f999598906fd37fda2c8c9a829

tdf#154040 writer still needs an "empty" object so create one

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-04-02 09:43:31 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24a374ebc9da56cc6721e8feaa1e15ba850bf41d

tdf#154040 use a SdrObjKind::NewFrame for frame creation in writer

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 sdc.blanco 2023-04-05 11:05:48 UTC
Thanks Tomaž!  Interactive frame is back to normal. Setting to VERIFIED.