tdf#154040 writer still needs an "empty" object so create one

For inserting frames writer still relies on an empty SdrObject, so
create an instance of an empty object when requested to do so.

Change-Id: I8b55318a7fb4b02c9c40de4ca845a804af3e781a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149899
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>